import main.js and 1 of 6 exercises complete

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <nav></nav>
 
-  <header></header>
-
+  <header>working with data</header>
+  <h1>What's Steve up to?</h1>
   <article>
     <header></header>
     <section></section>
@@ -20,6 +20,7 @@
 
   <footer></footer>
 
+  <script src="data.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
